Update Posts “controlled-and-uncontrolled-airspace”

--- a/src/pages/posts/controlled-and-uncontrolled-airspace.mdx
+++ b/src/pages/posts/controlled-and-uncontrolled-airspace.mdx
@@ -2,7 +2,7 @@
 slug: controlled-and-uncontrolled-airspace
 title: Controlled and Uncontrolled Airspace
 date: 2020-10-07
-author: wutali
+author: IvanParra
 ---
 <!--StartFragment-->
 
