Update Posts “controlled-and-uncontrolled-airspace”

--- a/src/pages/posts/controlled-and-uncontrolled-airspace.mdx
+++ b/src/pages/posts/controlled-and-uncontrolled-airspace.mdx
@@ -4,7 +4,7 @@ title: Controlled and Uncontrolled Airspace
 date: 2020-10-07
 author: IvanParra
 tags:
-  - document
+  - aviation
 ---
 <!--StartFragment-->
 
