Update Posts “controlled-and-uncontrolled-airspace”

--- a/src/pages/posts/controlled-and-uncontrolled-airspace.mdx
+++ b/src/pages/posts/controlled-and-uncontrolled-airspace.mdx
@@ -284,6 +284,6 @@ Visual Flight Rules (VFR) Weather Minimums
 * 1,000 ft below
 * 1 SM beside
 
-Don't worry, in the [following post](https://ivanlp8.wixsite.com/misitio-2/post/vfr-weather-minimums) we will focus on the VFR weather minimums, and I will explain a little the why of the different VFR weather minimums.
+Don't worry, in the [following post](https://www.thinkingaviation.com/posts/vfr-weather-minimums) we will focus on the VFR weather minimums, and I will explain a little the why of the different VFR weather minimums.
 
 <!--EndFragment-->
