Update Posts “vfr-weather-minimums”

--- a/src/pages/posts/vfr-weather-minimums.mdx
+++ b/src/pages/posts/vfr-weather-minimums.mdx
@@ -8,9 +8,9 @@ tags:
 ---
 VFR Weather Minimums - [14 CFR § 91.155](https://www.law.cornell.edu/cfr/text/14/91.155)
 
-![VFR Weather Minimums](/images/weather-minima.png "VFR Weather Minimums")
+In a [previous post](https://www.thinkingaviation.com/posts/controlled-and-uncontrolled-airspace), we have seen the VFR weather minimums required for each airspace, but I would like to go over it again since it's one of the most important and difficult aviation topics to learn. The key to remember the weather minimums is not to learn them by heart but understand the reason for having different weather minimums in different airspaces.
 
-In a previous post, we have seen the VFR weather minimums required for each airspace, but I would like to go over it again since it's one of the most important and difficult aviation topics to learn. The key to remember the weather minimums is not to learn them by heart but understand the reason for having different weather minimums in different airspaces.
+![VFR Weather Minimums](/images/weather-minima.png "VFR Weather Minimums")
 
 So, let's talk a little bit about airspaces. The main reason for having different airspaces with different restrictions is to separate IFR traffic from VFR traffic. The weather minimums for each airspace will vary depending on the ATC capability to see and manage traffic, as the greater the ATC capabilities, like in B airspace, the less the VFR weather minimums required (3SM and Clear of clouds). Do you wonder why? The answer is easy, ATC can see you on the radar, that's why a transponder with ADS-B is required, then if needed, ATC can vector you or other traffics around you. Moreover, all traffic within B airspace is under control, that's why ATC clearance is required prior to entering the airspace, ATC is aware and can see all traffic within B airspace. The 3 SM flight visibility required is for us to be able to see the airport where we are going to land.
 
