--- a/src/pages/posts/how-to-validate-your-foreign-license-in-the-us.mdx
+++ b/src/pages/posts/how-to-validate-your-foreign-license-in-the-us.mdx
@@ -1,6 +1,6 @@
 ---
-slug: how-to-validate-your-foreign-license-in-the-US
-title: How to validate your foreign license in the US
+slug: how-to-validate-your-foreign-certificate-in-the-US
+title: How to validate your foreign certificate in the US
 date: 2020-10-08
 author: IvanParra
 tags:
@@ -10,15 +10,9 @@ tags:
 
 Today we will explain step by step how to obtain your foreign private pilot license in the United States.
 
-
-
-![Convalida tu licencia PPA en Estados Unidos](https://static.wixstatic.com/media/7b9272_2c4267d9f624461ca51b30b3e0c7ed60~mv2.jpg/v1/fit/w_300,h_300,al_c,q_5/file.jpg)![Convalida tu licencia PPA en Estados Unidos](https://static.wixstatic.com/media/7b9272_2c4267d9f624461ca51b30b3e0c7ed60~mv2.jpg/v1/fill/w_925,h_479,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2c4267d9f624461ca51b30b3e0c7ed60~mv2.webp)
-
-
+![How to validate your certificate in the US](/images/faa.webp "How to validate your certificate in the US")
 
 The regulations which govern the issuance of a foreign private pilot certificate can be found on [14 CFR § 61.75](https://www.law.cornell.edu/cfr/text/14/61.75) . This foreign based certificate allows us to train in the United States for any other certificate (commercial, instrument rating, multi engine, etc). It also lets us fly with Private Pilot privileges on any aircraft in which we are rated on the foreign license. Be careful, according to [14 CFR § 61.56](https://www.law.cornell.edu/cfr/text/14/61.56) before acting as Pilot in Command (PIC) a flight review is needed each 24 calendar months. Therefore, after you got your foreign based private pilot certificate, a flight review is needed prior to acting as PIC. Moreover, if our intention is to carry passenger (of course not for hire) we need to comply with the PIC Flight Experience described in [14 CFR § 61.57](https://www.law.cornell.edu/cfr/text/14/61.57), which are 3 take off and landings to a full stop in the aircraft category, class and type where the flight will be performed.
-
-
 
 Anyhow, what I mean is that if you want to fly in the US with your foreign based private pilot certificate, it’s not just the validation process, which is pretty easy paperwork with a Designated Pilot Examiner (DPE), in which he will confirm you can speak and read english by talking with you just a little bit, a flight review performed by a Certified Flight Instructor is also needed.
 
@@ -26,23 +20,15 @@ Foreign Based Private Pilot certificate Requirements
 
 The process will take from 2 to 4 months and it costs about $200 depending on the DPE to be used. It can also be done directly with a Flight Standard District Office (FSDO), but it will require a little bit more of time to schedule an appointment with them.
 
-
-
 * Hold a foreign pilot license at the private pilot license level or higher issued by a contracting State to the Convention on International Civil Aviation
 * Hold a medical certificate issued under [14 CFR part 67](https://www.law.cornell.edu/cfr/text/14/part-67) or a medical certificate issued by the country that issued the person's foreign pilot license
 * Be able to read, speak, write, and understand the English language
 
-
-
 Process step by step
-
-
 
 Download and fill the [AC 8060-71 Form](https://www.faa.gov/documentLibrary/media/Form/AC8060-71.pdf)
 
 ![Convalidá tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_2550282b2c0d47a7a87e9245d7ce4684~mv2.png/v1/fill/w_925,h_1002,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2550282b2c0d47a7a87e9245d7ce4684~mv2.webp)
-
-
 
 * Block 9 should be completed ASEL for Airplane Single Engine Land and AMEL for Airplane Multi Engine Land se debe ingresar ASEL.
 * Block 12 Private Pilot
@@ -52,29 +38,13 @@ Download and fill the [AC 8060-71 Form](https://www.faa.gov/documentLibrary/medi
 
 The FAA will answer the email or fax that the process has been started and if more information is required we will be contacted. At this point the FAA will contact the foreign agency who issued our license and will verify our certificates and pilot information
 
-
-
 ![Convalida tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_43c97683508448d482d5ec522d0188ab~mv2.png/v1/fill/w_925,h_763,al_c,q_90,usm_0.66_1.00_0.01/7b9272_43c97683508448d482d5ec522d0188ab~mv2.webp)
-
-
-
-
-
-
 
 ![Convalida tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_603c4c0238d7401586de866190c0b57e~mv2.png/v1/fit/w_300,h_300,al_c,q_5/file.png)![Convalida tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_603c4c0238d7401586de866190c0b57e~mv2.png/v1/fill/w_925,h_804,al_c,q_90,usm_0.66_1.00_0.01/7b9272_603c4c0238d7401586de866190c0b57e~mv2.webp)
 
-
-
 This same letter is also sent to the selected FSDO. It’s now time to schedule an appointment with the FSDO or with a DPE. This is the link with the FSDO contact information [Flight Standard District Office](https://www.faa.gov/about/office_org/field_offices/fsdo/)
 
-
-
 In some cases FSDOs are really busy and they let DPE process those type of forms, therefore FSDO will provide a list with the DPE in the desired zone, or you can manually search for a DPE with the following link - [DPE Search website](https://av-info.faa.gov/DesigneeSearch.asp)
-
-
-
-
 
 The day of the appointment (with the FSDO or DPE) you will need to bring with you the following documents:
 
@@ -86,43 +56,21 @@ The day of the appointment (with the FSDO or DPE) you will need to bring with yo
 
 The interview is not an exam, the FSDO inspector or DPE will ask us some personal questions and will determine if our english level is enough for the certificate, basically you should be able to read, understand and write in English.
 
-
-
 If we do have an instrument rating in our foreign license we can also perform a written test (50 multiple choice questions) prior the appointment and bring the test result with us. If that’s the case, we will obtain a Foreign Private Pilot license with IFR Rating.
 
 In order to schedule our Instrument Rating Foreign Pilot test we need to enter the [PSI website](https://faa.psiexams.co/) and create an account. Prior we need to create an account with [IACRA](https://iacra.faa.gov/IACRA/default.aspx) and make note about our FAA Tracking number (FTN). Remember the test should be done prior to the appointment and the test report should be taken to that appointment.
 
-
-
-
-
 ![](https://static.wixstatic.com/media/7b9272_2f05bc5f779f4dc18ee8859077e38e0f~mv2.png/v1/fit/w_300,h_300,al_c,q_5/file.png)![](https://static.wixstatic.com/media/7b9272_2f05bc5f779f4dc18ee8859077e38e0f~mv2.png/v1/fill/w_925,h_256,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2f05bc5f779f4dc18ee8859077e38e0f~mv2.webp)
 
-
-
-
-
 If your idea is to get the foreign based private pilot to continue training in the United States for U.S certificate (not a foreign based one), I will recommend you to get only the Private Pilot Foreign based (without the IFR) since later on you will do an IFR checkride anyways.
-
-
-
-
-
-
 
 ![](https://static.wixstatic.com/media/7b9272_2ca723135e784073b9e93944fd53841c~mv2.png/v1/fit/w_300,h_300,al_c,q_5/file.png)![](https://static.wixstatic.com/media/7b9272_2ca723135e784073b9e93944fd53841c~mv2.png/v1/fill/w_450,h_448,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2ca723135e784073b9e93944fd53841c~mv2.webp)
 
 Temporary certificate
 
-
-
 After the interview we will get our temporary certificate valid for 120 days. This temporary certificate is enough to start our training.
 
-
-
 Remember, you always need to have with you your foreign based certificate and your foreign license, medical certificate when acting as PIC.
-
-
 
 I personally did this process with my Argentinian certificate and it was pretty easy. Please leave me your comments and experience with foreign based certificates.
 
