Update Posts “how-to-validate-your-foreign-license-in-the-us”

--- a/src/pages/posts/how-to-validate-your-foreign-license-in-the-us.mdx
+++ b/src/pages/posts/how-to-validate-your-foreign-license-in-the-us.mdx
@@ -12,11 +12,11 @@ Today we will explain step by step how to obtain your foreign private pilot lice
 
 ![How to validate your certificate in the US](/images/faa.webp "How to validate your certificate in the US")
 
-The regulations which govern the issuance of a foreign private pilot certificate can be found on [14 CFR § 61.75](https://www.law.cornell.edu/cfr/text/14/61.75) . This foreign based certificate allows us to train in the United States for any other certificate (commercial, instrument rating, multi engine, etc). It also lets us fly with Private Pilot privileges on any aircraft in which we are rated on the foreign license. Be careful, according to [14 CFR § 61.56](https://www.law.cornell.edu/cfr/text/14/61.56) before acting as Pilot in Command (PIC) a flight review is needed each 24 calendar months. Therefore, after you got your foreign based private pilot certificate, a flight review is needed prior to acting as PIC. Moreover, if our intention is to carry passenger (of course not for hire) we need to comply with the PIC Flight Experience described in [14 CFR § 61.57](https://www.law.cornell.edu/cfr/text/14/61.57), which are 3 take off and landings to a full stop in the aircraft category, class and type where the flight will be performed.
+The regulations which govern the issuance of a foreign private pilot certificate can be found on [14 CFR § 61.75](https://www.law.cornell.edu/cfr/text/14/61.75). This foreign-based certificate allows us to train in the United States for any other certificate (commercial, instrument rating, multi-engine, etc). It also lets us fly with Private Pilot privileges on any aircraft in which we are rated on the foreign license. Be careful, according to [14 CFR § 61.56](https://www.law.cornell.edu/cfr/text/14/61.56) before acting as Pilot in Command (PIC) a flight review is needed each 24 calendar months. Therefore, after you got your foreign-based private pilot certificate, a flight review is needed prior to acting as PIC. Moreover, if our intention is to carry a passenger (of course not for hire) we need to comply with the PIC Flight Experience described in [14 CFR § 61.57](https://www.law.cornell.edu/cfr/text/14/61.57), which are 3 take off and landings to a full stop in the aircraft category, class and type where the flight will be performed.
 
-Anyhow, what I mean is that if you want to fly in the US with your foreign based private pilot certificate, it’s not just the validation process, which is pretty easy paperwork with a Designated Pilot Examiner (DPE), in which he will confirm you can speak and read english by talking with you just a little bit, a flight review performed by a Certified Flight Instructor is also needed.
+Anyhow, what I mean is that if you want to fly in the US with your foreign-based private pilot certificate, it’s not just the validation process, which is pretty easy paperwork with a Designated Pilot Examiner (DPE), in which he will confirm you can speak and read English by talking with you just a little bit, a flight review performed by a Certified Flight Instructor is also needed.
 
-Foreign Based Private Pilot certificate Requirements
+**Foreign Based Private Pilot certificate Requirements**
 
 The process will take from 2 to 4 months and it costs about $200 depending on the DPE to be used. It can also be done directly with a Flight Standard District Office (FSDO), but it will require a little bit more of time to schedule an appointment with them.
 
@@ -28,25 +28,25 @@ Process step by step
 
 Download and fill the [AC 8060-71 Form](https://www.faa.gov/documentLibrary/media/Form/AC8060-71.pdf)
 
-![Convalidá tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_2550282b2c0d47a7a87e9245d7ce4684~mv2.png/v1/fill/w_925,h_1002,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2550282b2c0d47a7a87e9245d7ce4684~mv2.webp)
+![Validate certificate in the US](/images/foreign-form.webp "Validate certificate in the US")
 
-* Block 9 should be completed ASEL for Airplane Single Engine Land and AMEL for Airplane Multi Engine Land se debe ingresar ASEL.
+* Block 9 should be completed ASEL for Airplane Single Engine Land and AMEL for Airplane Multi-Engine Land
 * Block 12 Private Pilot
 * Block 13 selects a convenient [Flight Standard District Office](https://www.faa.gov/about/office_org/field_offices/fsdo/) (FSDO). You will need to schedule an appointment with them
-* Print the form, complete the date and sign it. Thereafter scan it and send it to [FV3@FAA.GOV](mailto:FV3@FAA.GOV) or by fax to +1 (405) 954-9922.
+* Print the form, complete the date, and sign it. Thereafter scan it and send it to [FV3@FAA.GOV](mailto:FV3@FAA.GOV) or by fax to +1 (405) 954-9922.
 * Attach to the form (by email or fax) a photocopy of our foreign pilot certificate and current medical certificate.
 
-The FAA will answer the email or fax that the process has been started and if more information is required we will be contacted. At this point the FAA will contact the foreign agency who issued our license and will verify our certificates and pilot information
+The FAA will answer the email or fax that the process has been started and if more information is required we will be contacted. At this point, the FAA will contact the foreign agents who issued our license and will verify our certificates and pilot information
 
-![Convalida tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_43c97683508448d482d5ec522d0188ab~mv2.png/v1/fill/w_925,h_763,al_c,q_90,usm_0.66_1.00_0.01/7b9272_43c97683508448d482d5ec522d0188ab~mv2.webp)
+![Validate your foreing certificate](/images/faa-letter.webp "Validate your foreing certificate")
 
-![Convalida tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_603c4c0238d7401586de866190c0b57e~mv2.png/v1/fit/w_300,h_300,al_c,q_5/file.png)![Convalida tu licencia en EEUU](https://static.wixstatic.com/media/7b9272_603c4c0238d7401586de866190c0b57e~mv2.png/v1/fill/w_925,h_804,al_c,q_90,usm_0.66_1.00_0.01/7b9272_603c4c0238d7401586de866190c0b57e~mv2.webp)
+![Validate your foreing certificate in the US](/images/faa-letter2.webp "Validate your foreing certificate in the US")
 
 This same letter is also sent to the selected FSDO. It’s now time to schedule an appointment with the FSDO or with a DPE. This is the link with the FSDO contact information [Flight Standard District Office](https://www.faa.gov/about/office_org/field_offices/fsdo/)
 
-In some cases FSDOs are really busy and they let DPE process those type of forms, therefore FSDO will provide a list with the DPE in the desired zone, or you can manually search for a DPE with the following link - [DPE Search website](https://av-info.faa.gov/DesigneeSearch.asp)
+In some cases, FSDOs are really busy and they let DPE process those type of forms, therefore FSDO will provide a list with the DPE in the desired zone, or you can manually search for a DPE with the following link - [DPE Search website](https://av-info.faa.gov/DesigneeSearch.asp)
 
-The day of the appointment (with the FSDO or DPE) you will need to bring with you the following documents:
+On day of the appointment (with the FSDO or DPE) you will need to bring with you the following documents:
 
 * FAA letter received
 * Flight logbook
@@ -54,24 +54,24 @@ The day of the appointment (with the FSDO or DPE) you will need to bring with yo
 * Foreign Medical Certificate
 * Passport
 
-The interview is not an exam, the FSDO inspector or DPE will ask us some personal questions and will determine if our english level is enough for the certificate, basically you should be able to read, understand and write in English.
+The interview is not an exam, the FSDO inspector or DPE will ask us some personal questions and will determine if our English level is enough for the certificate, basically, you should be able to read, understand and write in English.
 
-If we do have an instrument rating in our foreign license we can also perform a written test (50 multiple choice questions) prior the appointment and bring the test result with us. If that’s the case, we will obtain a Foreign Private Pilot license with IFR Rating.
+If we do have an instrument rating in our foreign license we can also perform a written test (50 multiple choice questions) prior to the appointment and bring the test result with us. If that’s the case, we will obtain a Foreign Private Pilot license with IFR Rating.
 
-In order to schedule our Instrument Rating Foreign Pilot test we need to enter the [PSI website](https://faa.psiexams.co/) and create an account. Prior we need to create an account with [IACRA](https://iacra.faa.gov/IACRA/default.aspx) and make note about our FAA Tracking number (FTN). Remember the test should be done prior to the appointment and the test report should be taken to that appointment.
+In order to schedule our Instrument Rating Foreign Pilot test, we need to enter the [PSI website](https://faa.psiexams.co/) and create an account. Prior we need to create an account with [IACRA](https://iacra.faa.gov/IACRA/default.aspx) and make a note about our FAA Tracking Number (FTN). Remember the test should be done prior to the appointment and the test report should be taken to that appointment.
 
-![](https://static.wixstatic.com/media/7b9272_2f05bc5f779f4dc18ee8859077e38e0f~mv2.png/v1/fit/w_300,h_300,al_c,q_5/file.png)![](https://static.wixstatic.com/media/7b9272_2f05bc5f779f4dc18ee8859077e38e0f~mv2.png/v1/fill/w_925,h_256,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2f05bc5f779f4dc18ee8859077e38e0f~mv2.webp)
+![FTN Number](/images/ftn-number.webp "FTN number")
 
-If your idea is to get the foreign based private pilot to continue training in the United States for U.S certificate (not a foreign based one), I will recommend you to get only the Private Pilot Foreign based (without the IFR) since later on you will do an IFR checkride anyways.
+If your idea is to get the foreign-based private pilot to continue training in the United States for a U.S certificate (not a foreign-based one), I will recommend you to get only the Private Pilot Foreign-based (without the IFR) since later on, you will do an IFR check-ride anyways.
 
-![](https://static.wixstatic.com/media/7b9272_2ca723135e784073b9e93944fd53841c~mv2.png/v1/fit/w_300,h_300,al_c,q_5/file.png)![](https://static.wixstatic.com/media/7b9272_2ca723135e784073b9e93944fd53841c~mv2.png/v1/fill/w_450,h_448,al_c,q_90,usm_0.66_1.00_0.01/7b9272_2ca723135e784073b9e93944fd53841c~mv2.webp)
+![Foreign temporary certificate](/images/temporary-certificate.webp "Foreign temporary certificate")
 
 Temporary certificate
 
-After the interview we will get our temporary certificate valid for 120 days. This temporary certificate is enough to start our training.
+After the interview, we will get our temporary certificate valid for 120 days. This temporary certificate is enough to start our training.
 
-Remember, you always need to have with you your foreign based certificate and your foreign license, medical certificate when acting as PIC.
+Remember, you always need to have with you your foreign-based certificate and your foreign license, medical certificate when acting as PIC.
 
-I personally did this process with my Argentinian certificate and it was pretty easy. Please leave me your comments and experience with foreign based certificates.
+I personally did this process with my Argentinian certificate and it was pretty easy. Please leave me your comments and experience with foreign-based certificates.
 
 <!--EndFragment-->
